// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFieldPassword is rendered 1`] = `
<div
  class="euiFormControlLayout emotion-euiFormControlLayout"
>
  <div
    class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
    style="--euiFormControlLeftIconsCount: 1;"
  >
    <div
      class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
    >
      <span
        class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="lock"
        />
      </span>
    </div>
    <eui-validatable-control>
      <input
        aria-label="aria-label"
        class="euiFieldPassword testClass1 testClass2 emotion-euiFieldPassword-euiTestCss"
        data-test-subj="test subject string"
        id="1"
        name="elastic"
        placeholder="Placeholder"
        type="password"
        value="1"
      />
    </eui-validatable-control>
  </div>
</div>
`;

exports[`EuiFieldPassword props compressed is rendered 1`] = `
<div
  class="euiFormControlLayout emotion-euiFormControlLayout-compressed"
>
  <div
    class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
    style="--euiFormControlLeftIconsCount: 1;"
  >
    <div
      class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-compressed-absolute-left"
    >
      <span
        class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="lock"
        />
      </span>
    </div>
    <eui-validatable-control>
      <input
        class="euiFieldPassword emotion-euiFieldPassword-compressed"
        type="password"
        value=""
      />
    </eui-validatable-control>
  </div>
</div>
`;

exports[`EuiFieldPassword props dual dual type also renders append 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-group"
>
  <div
    class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-appendOnly"
    style="--euiFormControlLeftIconsCount: 1;"
  >
    <div
      class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
    >
      <span
        class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="lock"
        />
      </span>
    </div>
    <eui-validatable-control>
      <input
        class="euiFieldPassword emotion-euiFieldPassword-inGroup-withToggle"
        type="password"
        value=""
      />
    </eui-validatable-control>
  </div>
  <div
    class="euiFormControlLayout__append emotion-euiFormControlLayout__side-append"
  >
    <label
      class="euiFormLabel emotion-euiFormLabel"
    >
      String
    </label>
    <span>
      Span
    </span>
    <button
      aria-label="Show password as plain text. Note: this will visually expose your password on the screen."
      class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
      title="Show password as plain text. Note: this will visually expose your password on the screen."
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="eye"
      />
    </button>
  </div>
</div>
`;

exports[`EuiFieldPassword props dual dualToggleProps is rendered 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-group"
>
  <div
    class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-appendOnly"
    style="--euiFormControlLeftIconsCount: 1;"
  >
    <div
      class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
    >
      <span
        class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="lock"
        />
      </span>
    </div>
    <eui-validatable-control>
      <input
        class="euiFieldPassword emotion-euiFieldPassword-inGroup-withToggle"
        type="password"
        value=""
      />
    </eui-validatable-control>
  </div>
  <div
    class="euiFormControlLayout__append emotion-euiFormControlLayout__side-append"
  >
    <button
      aria-label="aria-label"
      class="euiButtonIcon testClass1 testClass2 emotion-euiButtonIcon-xs-empty-primary-euiTestCss"
      data-test-subj="test subject string"
      title="Show password as plain text. Note: this will visually expose your password on the screen."
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="eye"
      />
    </button>
  </div>
</div>
`;

exports[`EuiFieldPassword props fullWidth is rendered 1`] = `
<div
  class="euiFormControlLayout emotion-euiFormControlLayout-fullWidth"
>
  <div
    class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
    style="--euiFormControlLeftIconsCount: 1;"
  >
    <div
      class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
    >
      <span
        class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="lock"
        />
      </span>
    </div>
    <eui-validatable-control>
      <input
        class="euiFieldPassword emotion-euiFieldPassword-fullWidth"
        type="password"
        value=""
      />
    </eui-validatable-control>
  </div>
</div>
`;

exports[`EuiFieldPassword props isInvalid is rendered 1`] = `
<div
  class="euiFormControlLayout emotion-euiFormControlLayout"
>
  <div
    class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
    style="--euiFormControlLeftIconsCount: 1; --euiFormControlRightIconsCount: 1;"
  >
    <div
      class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
    >
      <span
        class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="lock"
        />
      </span>
    </div>
    <eui-validatable-control
      isinvalid="true"
    >
      <input
        class="euiFieldPassword emotion-euiFieldPassword"
        type="password"
        value=""
      />
    </eui-validatable-control>
    <div
      class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
    >
      <span
        color="danger"
        data-euiicon-type="warning"
      />
    </div>
  </div>
</div>
`;

exports[`EuiFieldPassword props isLoading is rendered 1`] = `
<div
  class="euiFormControlLayout emotion-euiFormControlLayout"
>
  <div
    class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
    style="--euiFormControlLeftIconsCount: 1; --euiFormControlRightIconsCount: 1;"
  >
    <div
      class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
    >
      <span
        class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="lock"
        />
      </span>
    </div>
    <eui-validatable-control>
      <input
        class="euiFieldPassword euiFieldPassword-isLoading emotion-euiFieldPassword"
        type="password"
        value=""
      />
    </eui-validatable-control>
    <div
      class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
    >
      <span
        aria-label="Loading"
        class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`EuiFieldPassword props prepend and append is rendered 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-group"
>
  <div
    class="euiFormControlLayout__prepend emotion-euiFormControlLayout__side-prepend"
  >
    <label
      class="euiFormLabel emotion-euiFormLabel"
    >
      String
    </label>
  </div>
  <div
    class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup"
    style="--euiFormControlLeftIconsCount: 1;"
  >
    <div
      class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
    >
      <span
        class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="lock"
        />
      </span>
    </div>
    <eui-validatable-control>
      <input
        class="euiFieldPassword emotion-euiFieldPassword-inGroup"
        type="password"
        value=""
      />
    </eui-validatable-control>
  </div>
  <div
    class="euiFormControlLayout__append emotion-euiFormControlLayout__side-append"
  >
    <label
      class="euiFormLabel emotion-euiFormLabel"
    >
      String
    </label>
  </div>
</div>
`;

exports[`EuiFieldPassword props type dual is rendered 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-group"
>
  <div
    class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-appendOnly"
    style="--euiFormControlLeftIconsCount: 1;"
  >
    <div
      class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
    >
      <span
        class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="lock"
        />
      </span>
    </div>
    <eui-validatable-control>
      <input
        class="euiFieldPassword emotion-euiFieldPassword-inGroup-withToggle"
        type="password"
        value=""
      />
    </eui-validatable-control>
  </div>
  <div
    class="euiFormControlLayout__append emotion-euiFormControlLayout__side-append"
  >
    <button
      aria-label="Show password as plain text. Note: this will visually expose your password on the screen."
      class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
      title="Show password as plain text. Note: this will visually expose your password on the screen."
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="eye"
      />
    </button>
  </div>
</div>
`;

exports[`EuiFieldPassword props type password is rendered 1`] = `
<div
  class="euiFormControlLayout emotion-euiFormControlLayout"
>
  <div
    class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
    style="--euiFormControlLeftIconsCount: 1;"
  >
    <div
      class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
    >
      <span
        class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="lock"
        />
      </span>
    </div>
    <eui-validatable-control>
      <input
        class="euiFieldPassword emotion-euiFieldPassword"
        type="password"
        value=""
      />
    </eui-validatable-control>
  </div>
</div>
`;

exports[`EuiFieldPassword props type text is rendered 1`] = `
<div
  class="euiFormControlLayout emotion-euiFormControlLayout"
>
  <div
    class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
    style="--euiFormControlLeftIconsCount: 1;"
  >
    <div
      class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
    >
      <span
        class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="lock"
        />
      </span>
    </div>
    <eui-validatable-control>
      <input
        class="euiFieldPassword emotion-euiFieldPassword"
        type="text"
        value=""
      />
    </eui-validatable-control>
  </div>
</div>
`;
